deploy/k8s/overlays/test/redis.test.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        k8s.scaleway.com/pool-name: matchid
